--- a/vercel.json
+++ b/vercel.json
@@ -3,3 +3,9 @@
   "builds": [{ "src": "server.js", "use": "@vercel/node" }],
   "routes": [{ "src": "/api/(.*)", "dest": "server.js" }]
 }
+
+npm install -g vercel
+vercel login
+vercel deploy
+
+GEMINI_API_KEY
