--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,20 @@
 {
-  "buildCommand": "echo 'Frontend deployment'",
-  "outputDirectory": "frontend",
-  "framework": "html",
+  "version": 2,
+  "public": true,
+  "builds": [
+    {
+      "src": "frontend/index.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/index.html"
+    }
+  ],
   "env": {
-    "BACKEND_URL": "@backend_url"
-  }
+    "BACKEND_URL": "@BACKEND_URL"
+  },
+  "buildCommand": "echo 'Static HTML frontend - no build needed'"
 }
